doc: docs added for revocation service
